--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "express-react-views": "^0.11.0",
+    "nodemon": "^2.0.16",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   }
 }
