--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-react-views": "^0.11.0",
+    "method-override": "^3.0.0",
     "nodemon": "^2.0.16",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
