--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "breads",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nitromagix/Breads.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/nitromagix/Breads/issues"
-  },
-  "homepage": "https://github.com/nitromagix/Breads#readme",
-  "dependencies": {
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "express-react-views": "^0.11.0",
-    "method-override": "^3.0.0",
-    "mongoose": "^6.3.5",
-    "nodemon": "^2.0.16",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
-  }
+   "name": "breads",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "engines": {
+      "node": "v16.14.0"
+   },
+   "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/nitromagix/Breads.git"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "bugs": {
+      "url": "https://github.com/nitromagix/Breads/issues"
+   },
+   "homepage": "https://github.com/nitromagix/Breads#readme",
+   "dependencies": {
+      "dotenv": "^16.0.1",
+      "express": "^4.18.1",
+      "express-react-views": "^0.11.0",
+      "method-override": "^3.0.0",
+      "mongoose": "^6.3.5",
+      "nodemon": "^2.0.16",
+      "react": "^16.14.0",
+      "react-dom": "^16.14.0"
+   }
 }
